--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     </style>
     <meta charset="utf-8" />
   </head>
-  <body><script type="text/javascript" src="bundle.min.js"></script></body>
+  <body>
+    <div id="game"></div>
+  <script type="text/javascript" src="bundle.min.js"></script></body>
 </html>
